...
            <point key="canvasLocation" x="368" y="-126"/>
        </scene>
        <!--Setting-->
        <scene sceneID="Ydp-OT-xoH">
            <objects>
                <viewControllerPlaceholder storyboardName="Setting" id="Wrb-fm-mH3" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" id="0J8-73-VLC"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cJO-tu-iOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="379" y="-23"/>
        </scene>
    </scenes>
...
