...
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { (_) in
            
        }
        
        alertController.addAction(cancelAction)
        
        let OKAction = UIAlertAction(title: "Buy for $9.99", style: .default) { (_) in
            self.buyProduct(withIdentifier: AppConstants.subscriptionId)
        }
        alertController.addAction(OKAction)
        
        let RestoreAction = UIAlertAction(title: "Restore your Purchase", style: .default) { (_) in
            self.restoreProduct(withIdentifier: AppConstants.subscriptionId)
...
